--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=auth-service
+server.port=8100
+
+jwt.secret=wcc-java-challenge-december-2024
+jwt.expiration=86400000
+
+#common
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.f8yef.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=java_challenge
+spring.data.mongodb.auto-index-creation=true
+spring.jackson.default-property-inclusion=NON_NULL
