Add eureka-server for service discovery

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -5,7 +5,9 @@ jwt.secret=wcc-java-challenge-december-2024
 jwt.expiration=86400000
 
 #common
-spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.f8yef.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=java_challenge
+spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/java_challenge?authSource=admin
 spring.data.mongodb.auto-index-creation=true
 spring.jackson.default-property-inclusion=NON_NULL
+
+#eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
