--- a/postcodes-service/src/main/resources/application.properties
+++ b/postcodes-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8200
 spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/java_challenge?authSource=admin
 spring.data.mongodb.auto-index-creation=true
 spring.jackson.default-property-inclusion=NON_NULL
+
+# eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
