Added jwt token validation in api gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8765
 eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
 
 logging.level.org.springframework.cloud.gateway=DEBUG
+
+jwt.secret=wcc-java-challenge-december-2024
